--- a/css/style.css
+++ b/css/style.css
@@ -129,10 +129,41 @@ select {
 }
 
 /* Блок герой */
-/* .hero {} */
+.hero {
+  padding-top: 54px;
+  padding-bottom: 54px;
+}
 .hero-title {
+  margin-bottom: 26px;
+
+  font-weight: 400;
+  font-size: 64px;
+  line-height: 75px;
+  text-align: center;
+
+  color: var(--white);
 }
 .hero-text {
+  position: relative;
+
+  margin-bottom: 26px;
+
+  font-size: 16px;
+  line-height: 140%;
+  text-align: center;
+  text-transform: lowercase;
+
+  color: var(--white);
+}
+
+.hero-text::after {
+  content: "";
+  position: absolute;
+  top: 56px;
+  left: 50%;
+  width: 1px;
+  height: 50px;
+  background-color: var(--white);
 }
 .hero-container {
 }
