--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,6 @@ select {
 /* Блок герой */
 .hero {
   padding-top: 54px;
-  padding-bottom: 54px;
 }
 .hero-title {
   margin-bottom: 26px;
@@ -164,4 +163,36 @@ select {
   width: 1px;
   height: 59px;
   background-color: var(--white);
+}
+
+/* Блок обзора характеристик ракеты */
+.overview {
+  position: relative;
+}
+.overview-title {
+  padding-top: 492px;
+  margin-bottom: 44px;
+
+  color: var(--white);
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 140%;
+  text-transform: uppercase;
+}
+.overview-list {
+}
+.overview-item {
+}
+.overview-text {
+  color: var(--white);
+}
+.overview-wrap__kg {
+}
+.overview-wrap__lb {
+}
+.overview-img {
+  position: absolute;
+  margin-left: auto;
+  right: 0;
+  top: 0;
 }
