--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,7 @@ select {
 /* Блок обзора характеристик ракеты */
 .overview {
   position: relative;
+  padding-bottom: 550px;
 }
 .overview-title {
   padding-top: 492px;
@@ -196,9 +197,18 @@ select {
 }
 .overview-wrap__kg {
   color: var(--white);
+  transition: color var(--main-animation);
+  cursor: default;
+}
+.overview-wrap__kg:hover {
+  color: var(--text-color);
 }
 .overview-wrap__lb {
   color: var(--text-color);
+  transition: color var(--main-animation);
+}
+.overview-wrap__lb:hover {
+  color: var(--white);
 }
 .overview-title__second {
   margin-top: 218px;
@@ -222,4 +232,62 @@ select {
   margin-left: auto;
   right: 0;
   top: 0;
+}
+/* footer */
+.footer {
+  padding-bottom: 130px;
+}
+.footer-flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer-logo {
+  margin-bottom: 44px;
+}
+.footer-list {
+  display: flex;
+
+  gap: 20px;
+}
+.footer-item {
+  margin-bottom: 24px;
+}
+.footer-link {
+  text-decoration: none;
+  color: var(--white);
+  transition: color var(--main-animation);
+}
+.footer-link:hover {
+  color: var(--text-color);
+}
+.footer-text {
+  margin-bottom: 30px;
+  color: var(--text-color);
+}
+.footer-mail {
+  margin-left: 6px;
+  text-decoration: none;
+  color: var(--text-color);
+  transition: color var(--main-animation);
+}
+.footer-mail:hover {
+  color: var(--white);
+}
+.footer-button {
+  width: 260px;
+  height: 60px;
+
+  align-items: center;
+  text-align: center;
+
+  border-radius: 6px;
+  border: 2px solid var(--white);
+  background-color: var(--black);
+  color: var(--white);
+
+  cursor: pointer;
+}
+.footer-button:hover {
+    sha
 }
