--- a/css/main.css
+++ b/css/main.css
@@ -217,4 +217,60 @@ select {
   margin-left: auto;
   right: 0;
   top: 0;
+}
+
+/* footer */
+.footer {
+  padding-bottom: 130px;
+}
+.footer-flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer-logo {
+  margin-bottom: 44px;
+}
+.footer-list {
+  display: flex;
+  gap: 20px;
+}
+.footer-item {
+  margin-bottom: 24px;
+}
+.footer-link {
+  text-decoration: none;
+  color: var(--white);
+  transition: color var(--main-animation);
+}
+.footer-link:hover {
+  color: var(--text-color);
+}
+.footer-text {
+  margin-bottom: 30px;
+  color: var(--text-color);
+}
+.footer-mail {
+  margin-left: 6px;
+  text-decoration: none;
+  color: var(--text-color);
+  transition: color var(--main-animation);
+}
+.footer-mail:hover {
+  color: var(--white);
+}
+.footer-button {
+  width: 260px;
+  height: 60px;
+  align-items: center;
+  text-align: center;
+  border-radius: 6px;
+  border: 2px solid var(--white);
+  background-color: var(--black);
+  color: var(--white);
+  cursor: pointer;
+  transition: box-shadow var(--main-animation);
+}
+.footer-button:hover {
+  box-shadow: 1px 0px 17px 9px rgba(255, 255, 255, 0.53);
 }/*# sourceMappingURL=main.css.map */
